--- a/frontend/analytics/src/styles/EmployeeDashboard.css
+++ b/frontend/analytics/src/styles/EmployeeDashboard.css
@@ -1,4 +1,12 @@
 .employee{
     display: flex;
-    flex-direction: column;
+    font-family: 'Courier New', Courier, monospace;
 }
+
+.employee h1 {
+    font-size: 30px;
+    align-items: center;
+
+    color: #333; /* Adjust the color as needed */
+    margin-left: 300px; /* Adjust the margin as needed */
+  }
